--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,7 @@ tinyc_headers = [
     'lib/macros.h',
     'lib/libapp.h',
     'lib/libconv.h',
+    'lib/libhtml.h',
     'lib/libpath.h',
     'lib/libstr.h',
     'lib/libtest.h',
@@ -56,6 +57,7 @@ tinyc_sources = [
     'lib/cstringlist.c',
     'lib/libapp.c',
     'lib/libconv.c',
+    'lib/libhtml.c',
     'lib/libpath.c',
     'lib/libstr.c',
     'lib/libtest.c',
@@ -95,6 +97,7 @@ tinytest_sources = [
     'test/test_cstring.c',
     'test/test_cstringlist.c',
     'test/test_libapp.c',
+    'test/test_libhtml.c',
     'test/test_libpath.c',
     'test/test_libstr.c',
     'test_main.c',
