--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ if get_option('buildtype') == 'plain'
 endif
 
 tinyc_deps = [
+    dependency('gtk+-3.0'),
     dependency('libpcre'),
 ]
 
@@ -34,14 +35,15 @@ tinyc_headers = [
     'lib/cregexp.h',
     'lib/cstring.h',
     'lib/cstringlist.h',
+    'lib/etkaction.h',
+    'lib/etype.h',
     'lib/libapp.h',
     'lib/libconv.h',
     'lib/libhtml.h',
+    'lib/libmacros.h',
     'lib/libpath.h',
     'lib/libstr.h',
     'lib/libtest.h',
-    'lib/libtype.h',
-    'lib/macros.h',
     'lib/print.h',
 ]
 
@@ -56,6 +58,7 @@ tinyc_sources = [
     'lib/cregexp.c',
     'lib/cstring.c',
     'lib/cstringlist.c',
+    'lib/etkaction.c',
     'lib/libapp.c',
     'lib/libconv.c',
     'lib/libhtml.c',
